--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
