--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "next": "^15.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
     "react-helmet-async": "^2.0.5",
