--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.1.1",
@@ -68,6 +69,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.36.0",
     "vite": "^6.0.5"
   }
 }
